--- a/React/my-app/src/components/Navbar.css
+++ b/React/my-app/src/components/Navbar.css
@@ -1,9 +1,13 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    /* add blending color to the nav bar */
+    background: linear-gradient(90deg, rgb(157, 22, 22) 0%, rgb(133, 111, 111) 100%);
+    /* how high the nav bar should be */
+    height: 100px;
     display: flex;
+    /* make sure that every nav bar item centers */
     justify-content: center;
     align-items: center;
+    /* determind how big each nav bar's size is  */
     font-size: 1.2rem;
     position: sticky;
     top: 0;
@@ -14,14 +18,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* make sure the all the nav items contained in the container */
     height: 80px;
+    /* make sure the nav container is big enough to contain all the items*/
     max-width: 1500px;
   }
   
   .navbar-logo {
-    color: #fff;
+    color: rgb(55, 35, 173);
     justify-self: start;
+    /*How far it should be away from the container on the left */
     margin-left: 20px;
+    /* put the cursor to the logo, the cursor changes to a hand pointer*/
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
@@ -30,7 +38,10 @@
   }
   
   .fa-typo3 {
+    /* How far should the small icon should be on the left and right*/
     margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    /* How big should the small icon should be */
     font-size: 1.8rem;
   }
   
@@ -66,6 +77,11 @@
   .fa-bars {
     color: #fff;
   }
+
+  .fa-times {
+    color: #fff; 
+  }
+  
   
   .nav-links-mobile {
     display: none;
@@ -74,7 +90,8 @@
   .menu-icon {
     display: none;
   }
-  
+  /*The following code allows for menu drop 
+  down menu */
   @media screen and (max-width: 960px) {
     .NavbarItems {
       position: relative;
@@ -126,33 +143,44 @@
       top: 0;
       right: 0;
       transform: translate(-100%, 60%);
-      font-size: 1.8rem;
+      font-size: .8rem;
       cursor: pointer;
     }
   
     .fa-times {
       color: #fff;
       font-size: 2rem;
+
     }
-  
+
+    .fa-bars {
+        color: #fff;
+        font-size: 2rem;
+    }
+    
+    
+    /* the sign up button before hovering over */
     .nav-links-mobile {
+      /* create a rectangle for the sign up button from drop down menu*/
       display: block;
       text-align: center;
       margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
+      /* make the text box from a rectangle to oval if border-radius is bigger */
+      border-radius: 3px;
+      /* shorten the box */
+      width: 60%;
       text-decoration: none;
       font-size: 1.5rem;
       background-color: transparent;
       color: #fff;
       padding: 14px 20px;
       border: 1px solid #fff;
-      transition: all 0.3s ease-out;
+      transition: all 0.3s west-out;
     }
-  
+    /* The effect after hovering over the sign up button on the drop down menu*/
     .nav-links-mobile:hover {
-      background: #fff;
+      background: rgb(88, 178, 64);
       color: #242424;
       transition: 250ms;
-    }
+    } 
   }
